# khiopsdriver-gcs

./: .gitignore  CMakeLists.txt  CMakePresets.json  generate_tests.cmake  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml  pack-conda.yml  pack-debian.yml  pack-rpm.yml
cmake/modules/: CodeCoverage.cmake
conda/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/: drivertest.cpp  gcsplugin.cpp  gcsplugin.h  gcsplugin_internal.h  gcsplugin_types.h  plugin_handler.cpp  plugin_handler.h
test/: CMakeLists.txt  basic_test.cpp  drivertest.cpp  path_helper.cpp  plugin_test.cpp
